--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   app:
-    container_name: test-zpt-digital
+    container_name: service-zpt-digital
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -11,3 +11,22 @@ services:
     volumes:
       - .:/www/deno/app
     command: deno task dev
+    depends_on:
+      - db
+
+  db:
+    container_name: db-zpt-digital
+    build: .docker/postgres
+    image: postgres
+    ports:
+      - "5432:5432"
+    tty: true
+    restart: always
+    volumes:
+      - .docker/dbdata:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_DB=zptdigital
+      - POSTGRES_PASSWORD=zptadminuser
+volumes:
+  db-data: {}
