--- a/src/environments/development.env
+++ b/src/environments/development.env
@@ -2,7 +2,8 @@
 PORT=5000
 
 #PostgreSQL
+HOST=db
+POSTGRES_PORT=5432
 POSTGRES_USER=admin
 POSTGRES_DB=zptdigital
 POSTGRES_PASSWORD=zptadminuser
-HOST=db
