--- a/src/environments/production.env
+++ b/src/environments/production.env
@@ -1,1 +1,9 @@
+#Server
 PORT=5000
+
+#PostgreSQL
+HOST=db
+POSTGRES_PORT=5432
+POSTGRES_USER=admin
+POSTGRES_DB=zptdigital
+POSTGRES_PASSWORD=zptadminuser
